- Fixed bug #43246 (firebird: INSERT ... RETURNING ... throws exception) #Reworked cursor_open/cursor_close #Only using isc_dsl_execute() (as in ext/interbase) Thanks to Hans-Peter Oeri for providing this patch

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@246465 c90b9560-bf6c-de11-be94-00142212c4b1